--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html>
 <head>
     <meta charset = "UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,7 @@
     <title>Momentum</title>
 </head>
 <body>
+    
     <form id ="login-form">
     <input required 
     max length = "15" 
@@ -17,26 +18,25 @@
     </form>
     <h2 id = "clock">00:00:00</h2>
     <h1 class = "hidden" id="greeting"></h1>
+    <form id ="todo-form"> 
+        <input type = "text" placeholder="Write a To Do a Press Enter" required />
+    </form>
+    <ul id ="todo-list">
+    </ul>
     <div id = "quote">
         <span></span>
         <span></span>
-
+    </div>
+    <div id = "weather">
+        <span></span>
+        <span></span>
     </div>
 
     <script src = "js/greetings.js"></script>
     <script src = "js/clock.js"></script>
     <script src = "js/quotes.js"></script>
     <script src = "js/background.js"></script>
-
-   
-    <h1 class = "hidden" id="greeting"></h1>
-
-    <script src = "js/greetings.js"></script>
-
-    <h2 id = "clock">00:00:00</h2>
-    <script src = "js/greetings.js"></script>
-    <script src = "js/clock.js"></script>
-
-   
+    <script src = "js/todo.js"></script>  
+    <script src = "js/weather.js"></script>  
 </body>
 </html>
